add character feature (#13)
